<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/bg_1x738_gradient_green">

	<ImageView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginBottom="20px"
		android:layout_margin="10px" android:src="@drawable/beta_logo"
		android:layout_gravity="center_horizontal" />
	<ScrollView android:layout_height="fill_parent" android:layout_width="fill_parent">
		<LinearLayout
			android:layout_height="fill_parent" android:layout_width="fill_parent"
			android:orientation="vertical" android:padding="5px">
			<TextView android:layout_height="wrap_content"
				android:textSize="20px" android:text="@string/about"
				android:textColor="#fff" android:layout_width="fill_parent"></TextView>
			<TextView android:layout_height="wrap_content"
				android:text="@string/about_b_1"
				android:layout_width="fill_parent"></TextView>
			<TextView android:layout_height="wrap_content"
				android:textSize="20px" 
				android:textColor="#fff"
				android:text="@string/about_h_2"
				android:layout_width="fill_parent" android:layout_marginTop="10px"></TextView>
			<TextView android:layout_height="wrap_content"
				android:text="@string/about_b_2"
				android:layout_width="fill_parent"></TextView>
			<TextView android:layout_height="wrap_content"
				android:text="@string/about_link"
				android:id="@+id/about_link_text"
				android:layout_width="fill_parent" android:layout_marginTop="10px"></TextView>
		</LinearLayout>
	</ScrollView>

</LinearLayout>
